--- a/ASP-1/Views/User/Profile.cshtml
+++ b/ASP-1/Views/User/Profile.cshtml
@@ -81,7 +81,7 @@
                             <div class="col-sm-1">
                                 @if(Model.IsPersonal)
                                 {
-                                    <img src="~/img/icons/pencil.svg" 
+                                    <img class="filter-white" src="~/img/icons/pencil.svg" 
                                         role="button" data-ref-field="realname" />
                                 }
                             </div>
@@ -118,7 +118,7 @@
                             <div class="col-sm-1">
                                 @if (Model.IsPersonal)
                                 {
-                                    <img src="~/img/icons/pencil.svg"
+                                    <img class="filter-white" src="~/img/icons/pencil.svg"
                                          role="button" data-ref-field="email" />
                                 }
                             </div>
@@ -144,7 +144,7 @@
 
 <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content bg-dark">
             <div class="modal-header">
                 <h5 class="modal-title" id="confirmModalLabel">Введите код из электронной почты</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -156,8 +156,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-warning" id="resend-email-button">Отправидь код повторно</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                <button type="button" class="btn btn-light" id="resend-email-button">Отправидь код повторно</button>
                 <button type="button" class="btn btn-primary" id="confirm-email-button">Подтвердить</button>
             </div>
         </div>
@@ -200,7 +199,7 @@
         console.log(elem);
 
         if (elem.textContent !== elem.originalValue && confirm("Save changes?")) {
-            if (elem.id === realname)
+            if (elem.id === "realname")
             {
                 updateSecondField(elem.innerText);
             }
