--- a/ASP-1/Views/Home/Index.cshtml
+++ b/ASP-1/Views/Home/Index.cshtml
@@ -6,7 +6,21 @@
 <div class="main-content mx-5">
     <div class="row mx-3">
         <div class=" block-background col-7 height-main-block main-news">
-            <h3>Главные новости</h3>
+            <h3 class="mx-5 mt-3">Главные новости</h3>
+
+            <a class="main-news-anim" href="a">
+                <div class="row mx-5">
+                    <p class="text-muted col-1">19:44</p>
+                    <p class="col-10">В Dota 2 вышел патч 7.33d</p>
+                </div>
+             </a>
+            <a class="main-news-anim" href="a">
+                <div class="row mx-5">
+                    <p class="text-muted col-1">14:05</p>
+                    <p class="col-10">В Valorant появится новый режим «Командный бой насмерть»</p>
+                </div>
+            </a>
+
         </div>
         <div class=" block-background col-4 height-main-block ms-auto main-games">
             <h3>Матчи</h3>
